--- a/notebook/crawler/Sample2 - Tumblr.ipynb
+++ b/notebook/crawler/Sample2 - Tumblr.ipynb
@@ -39,63 +39,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get Authorization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Registered as a Tumblr member\n",
-    "\n",
-    "### 2. Go to Tumblr API Console web page\n",
-    "\n",
-    "- Teaching: http://lmgtfy.com/?q=tumblr+api+console\n",
-    "\n",
-    "- Tumblr API Console: https://api.tumblr.com/console\n",
-    "\n",
-    "### 3. Click \"Or register a new application\" link\n",
-    "<img src=\"images/oauth/01.png\"/>\n",
-    "\n",
-    "### 4. Login Tumblr\n",
-    "<img src=\"images/oauth/02.png\"/>\n",
-    "\n",
-    "### 5. Fill in the blanks, red are required\n",
-    "<img src=\"images/oauth/03.png\"/>\n",
-    "\n",
-    "### 6. Check box \"我不是機器人\" and Click \"註冊\"\n",
-    "<img src=\"images/oauth/04.png\"/>\n",
-    "\n",
-    "### 7. Check \"Explore API\"\n",
-    "<img src=\"images/oauth/05.png\"/>\n",
-    "\n",
-    "### 8. Check \"允許\"\n",
-    "<img src=\"images/oauth/06.png\"/>\n",
-    "\n",
-    "### 9. Get Tumblr API oauth sample code, and save it!\n",
-    "<img src=\"images/oauth/07.png\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "---\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "# Tumblr User: codingjester"
+    "## Tumblr User: codingjester"
    ]
   },
   {
@@ -210,7 +158,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quick start"
+    "## Get Authorization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Registered as a Tumblr member\n",
+    "\n",
+    "### 2. Go to Tumblr API Console web page\n",
+    "\n",
+    "- Teaching: http://lmgtfy.com/?q=tumblr+api+console\n",
+    "\n",
+    "- Tumblr API Console: https://api.tumblr.com/console\n",
+    "\n",
+    "### 3. Click \"Or register a new application\" link\n",
+    "<img src=\"images/oauth/01.png\"/>\n",
+    "\n",
+    "### 4. Login Tumblr\n",
+    "<img src=\"images/oauth/02.png\"/>\n",
+    "\n",
+    "### 5. Fill in the blanks, red are required\n",
+    "<img src=\"images/oauth/03.png\"/>\n",
+    "\n",
+    "### 6. Check box \"我不是機器人\" and Click \"註冊\"\n",
+    "<img src=\"images/oauth/04.png\"/>\n",
+    "\n",
+    "### 7. Check \"Explore API\"\n",
+    "<img src=\"images/oauth/05.png\"/>\n",
+    "\n",
+    "### 8. Check \"允許\"\n",
+    "<img src=\"images/oauth/06.png\"/>\n",
+    "\n",
+    "### 9. Get Tumblr API oauth sample code, and save it!\n",
+    "<img src=\"images/oauth/07.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quick start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## API Source code: \n",
+    "> ### https://github.com/dianakhuang/pytumblr Python3\n",
+    "> #### https://github.com/tumblr/pytumblr Python2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## API Document: \n",
+    "> ### https://github.com/tumblr/pytumblr/blob/master/README.md"
    ]
   },
   {
@@ -232,22 +253,6 @@
    "source": [
     "import pytumblr\n",
     "from tumblr_auth import consumer_key, consumer_secret, oauth_token, oauth_secret"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Using Authorization sample code get to start"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/oauth/05.png\"/>"
    ]
   },
   {
@@ -292,7 +297,18 @@
     "collapsed": true
    },
    "source": [
-    "### Get user posts"
+    "### Get posts for a blog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "user_posts = client.posts(tumblr_user)"
    ]
   },
   {
@@ -303,25 +319,232 @@
    },
    "outputs": [],
    "source": [
-    "posts = client.posts(tumblr_user)\n",
-    "for post in posts.get('posts'):\n",
-    "    if not post.get('photos'):\n",
-    "        continue\n",
-    "    data = post.get('photos')[0]\n",
-    "    print(post.get('date'))\n",
-    "    print(data['original_size']['url'])"
+    "type(user_posts)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "source": [
-    "# Reference:\n",
-    "## API Source code: \n",
-    "> ### https://github.com/tumblr/pytumblr Python2\n",
-    "> ### https://github.com/dianakhuang/pytumblr Python3"
+    "### Providers information from user_posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "user_posts.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Total post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "user_posts['total_posts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "type(user_posts['total_posts'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Blog info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "user_posts['blog']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "type(user_posts['blog'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Posts content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "user_posts['posts']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Count posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(user_posts['posts'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Get one post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "one_post = user_posts['posts'][-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Looking content from the post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "one_post"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This post content type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "one_post['type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "one_post['photos']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Get user posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "photos_list = []\n",
+    "\n",
+    "user_posts = client.posts(tumblr_user)\n",
+    "for post in user_posts['posts']:\n",
+    "    if 'photos' not in post:\n",
+    "        continue\n",
+    "    print(post['date'])\n",
+    "    \n",
+    "    photo_data = post['photos'].pop()  # post['photos'][-1]\n",
+    "    print(photo_data['original_size']['url'])\n",
+    "    photo_list.append(photo_data['original_size']['url'])"
    ]
   },
   {
