--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -539,6 +539,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "## Raw response content"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "response = requests.get(URL, stream=True)\n",
+    "chunk_size = 1024\n",
+    "\n",
+    "with open(filename, 'wb') as fd:\n",
+    "for chunk in response.iter_content(chunk_size):\n",
+    "    fd.write(chunk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "---\n",
