--- a/notebook/crawler/Sample1 - Line_stickers.ipynb
+++ b/notebook/crawler/Sample1 - Line_stickers.ipynb
@@ -266,27 +266,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find out stickers URL string via BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for tag in soup.find_all('span'):\n",
-    "    pprint(tag)\n",
-    "    pprint(tag.attrs)\n",
-    "    print(\"--\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Try again to find out  stickers URL string via BeautifulSoup"
    ]
   },
@@ -317,14 +296,14 @@
    },
    "outputs": [],
    "source": [
-    "stickers = []\n",
+    "line_stickers = []\n",
     "\n",
     "for tag in soup.find_all('span', 'mdCMN09Image'):\n",
     "    style = tag['style']\n",
     "    l_parentheses = style.rfind('(') + 1\n",
     "    r_parentheses = style.rfind(')')\n",
     "    path = style[l_parentheses:r_parentheses]\n",
-    "    stickers.append(path)\n",
+    "    line_stickers.append(path)\n",
     "    print(path)"
    ]
   },
@@ -332,7 +311,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result:"
+    "## Download stickers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import requests"
    ]
   },
   {
@@ -343,7 +334,50 @@
    },
    "outputs": [],
    "source": [
-    "ls images/line_pic"
+    "title = soup.title.text.split('-')[0].strip()\n",
+    "if not os.path.exists(title):\n",
+    "    os.mkdir(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for url in line_stickers:\n",
+    "    local_filename = url.split('/')[-1]\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    with open(os.path.join(title, local_filename), 'wb') as f:\n",
+    "        for chunk in response.iter_content(chunk_size=1024):\n",
+    "            if chunk:\n",
+    "                f.write(chunk)\n",
+    "    print('%s Downloaded!' % local_filename)\n",
+    "print('Completed!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ls 熊大＆兔兔（跟我玩嘛☆恩愛篇）/"
    ]
   }
  ],
@@ -363,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
