--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -58,7 +58,17 @@
     "\n",
     "[conda - exe installer, bash installer](http://conda.pydata.org/miniconda.html)\n",
     "\n",
-    "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
+    "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "\n",
     "Conda make it easy to install third libraries, which are often a platform-dependent C, C++, or Fortran code.\n",
     "\n",
@@ -133,13 +143,46 @@
    "source": [
     "### Terminal - pwd, ls, cd\n",
     "\n",
-    "pwd - print the current directory\n",
+    "print the current directory\n",
     "\n",
-    "ls - print the files and working direcotries under the current direcotry\n",
+    "~~~\n",
+    "$pwd\n",
+    "~~~\n",
     "\n",
-    "cd /path/to/some/direcotry - change directory to /path/to/some/direcotry\n",
+    "print the files and working direcotries under the current direcotry\n",
     "\n",
-    "\n"
+    "~~~\n",
+    "$ls\n",
+    "~~~\n",
+    "\n",
+    "change directory to /path/to/some/direcotry\n",
+    "\n",
+    "~~~\n",
+    "$ cd /path/to/some/direcotory\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Terminal - cat, rm\n",
+    "\n",
+    "view the file\n",
+    "\n",
+    "~~~\n",
+    "$ cat /path/to/file\n",
+    "~~~\n",
+    "\n",
+    "remove the file\n",
+    "\n",
+    "~~~\n",
+    "$ rm /path/to/file\n",
+    "~~~"
    ]
   },
   {
@@ -328,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -350,22 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['PyHUG', 'Taichung', 'Tainan', 'Django Grils', 'Kaohsiung', 'Taipei', 'Hualien'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "cities = meetup_url.keys()\n",
@@ -374,19 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyHUG http://www.meetup.com/pythonhug/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city = random.choice(list(cities))\n",
     "print(city, meetup_url[city])"
