--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -178,6 +178,21 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "line = 'hello, world'\n",
+    "line.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -258,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "foo[1]"
+    "foo[0], foo[1]"
    ]
   },
   {
@@ -306,6 +321,18 @@
    "outputs": [],
    "source": [
     "foo + bar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "line = 'hello, world'\n",
+    "line.split()"
    ]
   },
   {
@@ -513,22 +540,7 @@
    },
    "outputs": [],
    "source": [
-    "meetup_url['彰化 python']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "meetup_url['彰化 python'] = '還沒有'\n",
-    "meetup_url['彰化 python']"
+    "meetup_url.get('彰化 python', '還沒有')"
    ]
   },
   {
@@ -627,7 +639,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -641,7 +653,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -750,21 +762,6 @@
    "outputs": [],
    "source": [
     "for line in open('hello.txt'):\n",
-    "    print('#', line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for line in open('hello.txt'):\n",
     "    print('#', line,)"
    ]
   },
@@ -820,6 +817,7 @@
     "\n",
     "line_num = 1\n",
     "for line in original_file:\n",
+    "    #print(line_num, line[:-1])\n",
     "    print(line_num, line)\n",
     "    line_num = 1 + line_num"
    ]
