--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -8,15 +8,28 @@
     }
    },
    "source": [
-    "## Target audience\n",
+    "**Hour of Code**\n",
+    "\n",
+    "# Make a web crawler in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Target audience\n",
     "\n",
     "We assume you know\n",
     "\n",
     "- the basic concepts of programming\n",
-    "    + variable\n",
-    "    + basic type\n",
-    "    + Control Structures\n",
-    "    + function\n",
+    "  + variable\n",
+    "  + basic type\n",
+    "  + Control Structures\n",
+    "  + function\n",
     "\n",
     "- basic HTML knowledge \n",
     "  since we want to make a web crawler\n",
