--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -331,6 +331,17 @@
    },
    "outputs": [],
    "source": [
+    "''.join(['Hello', ',', ' ', 'Python'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "line = 'hello, world'\n",
     "line.split()"
    ]
