--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -208,7 +208,21 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "'world, world'.rfind('world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -219,20 +233,6 @@
     "# ‘object??’ for extra details.\n",
     "\n",
     "str.rfind?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "'world, world'.rfind('world')"
    ]
   },
   {
