--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -406,14 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Hualien', 'Tainan', 'Taipei', 'Django Grils', 'Kaohsiung', 'PyHUG', 'Taichung'])\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "cities = meetup_url.keys()\n",
@@ -422,11 +430,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taipei http://www.meetup.com/Taipei-py/\n"
+     ]
+    }
+   ],
    "source": [
     "city = random.choice(list(cities))\n",
     "print(city, meetup_url[city])"
@@ -524,6 +540,8 @@
    },
    "source": [
     "# Any Question?\n",
+    "\n",
+    "Any feedback is welcome.\n",
     "\n",
     "Feel free to ask any questions about Python\n",
     "on [Python 台灣愛好者群組](https://groups.google.com/forum/#!forum/pythontw)."
