--- a/notebook/crawler/Sample2 - Tumblr.ipynb
+++ b/notebook/crawler/Sample2 - Tumblr.ipynb
@@ -304,7 +304,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
    },
    "outputs": [],
    "source": [
-    "photos_list = []\n",
+    "photo_list = []\n",
     "\n",
     "user_posts = client.posts(tumblr_user)\n",
     "for post in user_posts['posts']:\n",
