--- a/notebook/crawler/Web Crawler in Python.ipynb
+++ b/notebook/crawler/Web Crawler in Python.ipynb
@@ -659,7 +659,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Markup sample"
+    "- Markup sample\n",
+    "- TAG\n",
+    "- Attribtue"
    ]
   },
   {
