--- a/notebook/intro_python/2_python_quick_learning.ipynb
+++ b/notebook/intro_python/2_python_quick_learning.ipynb
@@ -1476,7 +1476,7 @@
     "\n",
     "[Learn X in Y minutes Where X=python](http://learnxinyminutes.com/docs/python/)\n",
     "\n",
-    "[LEARN PYTHON THE HEARD WAY](http://learnpythonthehardway.org/book/)\n",
+    "[LEARN PYTHON THE HARD WAY](http://learnpythonthehardway.org/book/)\n",
     "\n",
     "[The Hitchhiker’s Guide to Python](http://docs.python-guide.org/en/latest/)\n",
     "\n",
